src/app/app.component.scss
@use 'index' as *;

:host {
  display: flex;
  margin: auto;
  width: 100%;
  min-width: 280px;

  @include mobile {
    flex-direction: column;
    max-width: 375px;
  }

  @include desktop {
    padding: 64px 0;
  }
}

